constraint-deny-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedRoot
metadata:
  name: deny-root-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  enforcementAction: deny
